chore: minor code improvements and cleanup